--- a/org.openwms/trunk/app/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/pom.xml
@@ -107,13 +107,13 @@
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.domain.as</artifactId>
-                        <version>${project.version}</version>
+                        <version>${common.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.tms.domain.as</artifactId>
-                        <version>${project.version}</version>
+                        <version>${tms.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
@@ -264,16 +264,19 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain.as</artifactId>
+            <version>${common.version}</version>
             <type>swc</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.domain.as</artifactId>
+            <version>${tms.version}</version>
             <type>swc</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.lib</artifactId>
+            <version>${project.version}</version>
             <type>swc</type>
         </dependency>
 		
