--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -245,7 +245,6 @@
                 <module>app</module>
                 <module>core</module>
                 <module>common</module>
-				<module>tms</module>
             </modules>
         </profile>
         <profile>
@@ -297,7 +296,8 @@
         <moduleDir>.</moduleDir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdkVersion>1.6</jdkVersion>
-        <spring.version>3.0.0.RELEASE</spring.version>
+        <spring.version>3.0.3.RELEASE</spring.version>
+        <spring.security.version>3.0.3.RELEASE</spring.security.version>
         <hibernate.version>3.2.6.GA</hibernate.version>
         <granite.version>2.1.0.GA</granite.version>
         <flex.version>3.2.0.3958</flex.version>
@@ -328,7 +328,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
-<!-- 
+<!-- -->
         <pluginRepository>
             <id>com.springsource.repository.bundles.release</id>
             <name>SpringSource Enterprise Bundle Repository - Releases</name>
@@ -339,7 +339,7 @@
             <name>SpringSource Enterprise Bundle Repository - Milestone</name>
             <url>http://repository.springsource.com/maven/bundles/milestone</url>
         </pluginRepository>
--->
+
     </pluginRepositories>
     <repositories>
         <repository>
@@ -364,7 +364,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-<!-- 
+<!-- -->
         <repository>
             <id>com.springsource.repository.bundles.release</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
@@ -405,7 +405,7 @@
             <name>SpringSource Enterprise Bundle Repository - Milestone Library Releases</name>
             <url>http://repository.springsource.com/maven/libraries/milestone</url>
         </repository>
--->
+
     </repositories>
 
     <build>
@@ -794,63 +794,50 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.spring-library</artifactId>
-                <type>libd</type>
                 <version>${spring.version}</version>
-                <scope>provided</scope>
+                <type>libd</type>
             </dependency>
             <dependency>
                 <groupId>org.springframework.osgi</groupId>
                 <artifactId>org.springframework.osgi-library</artifactId>
-                <type>libd</type>
                 <version>1.1.2.B</version>
+                <type>libd</type>
             </dependency>
             <dependency>
                 <groupId>org.springframework.osgi</groupId>
                 <artifactId>spring-osgi-core</artifactId>
                 <version>1.2.1</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.test</artifactId>
                 <version>${spring.version}</version>
-                <scope>test</scope>
+                <type>jar</type>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.context</artifactId>
                 <version>${spring.version}</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.instrument</artifactId>
                 <version>${spring.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.aspects</artifactId>
                 <version>${spring.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>org.springframework.security.web</artifactId>
-                <version>${spring.version}</version>
-                <scope>provided</scope>
+                <version>${spring.security.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>org.springframework.security.core</artifactId>
-                <version>${spring.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>org.springframework.security.config</artifactId>
-                <version>${spring.version}</version>
-                <scope>provided</scope>
+                <version>${spring.security.version}</version>
             </dependency>
 
             <!-- JEE API -->
@@ -858,7 +845,6 @@
                 <groupId>javax.persistence</groupId>
                 <artifactId>com.springsource.javax.persistence</artifactId>
                 <version>1.0.0</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>javax.transaction</groupId>
@@ -869,7 +855,6 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>com.springsource.javax.servlet</artifactId>
                 <version>2.5.0</version>
-                <scope>provided</scope>
             </dependency>
 
             <!-- Apache libraries -->
@@ -882,7 +867,6 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
                 <version>1.2.2.osgi</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -903,17 +887,17 @@
             </dependency>
             <dependency>
                 <groupId>org.openwms</groupId>
-	        <artifactId>oracle.jdbc.driver</artifactId>
+                <artifactId>oracle.jdbc.driver</artifactId>
                 <version>6.0.0</version>
-                <scope>provided</scope>
+                <optional>true</optional>
             </dependency>
 
             <!-- JPA Provider Libraries -->
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>org.eclipse.persistence-library</artifactId>
-                <type>libd</type>
                 <version>1.0.0</version>
+                <type>libd</type>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -921,14 +905,18 @@
                 <version>3.4.0.GA</version>
                 <type>libd</type>
             </dependency>
+            <dependency>
+                <groupId>net.sourceforge.ehcache</groupId>
+                <artifactId>com.springsource.net.sf.ehcache</artifactId>
+                <version>1.6.2</version>
+            </dependency>
 
             <!-- Weaver, used only for EclipseLink provider -->
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>org.aspectj-library</artifactId>
-                <type>libd</type>
                 <version>1.6.5.RELEASE</version>
-                <scope>provided</scope>
+                <type>libd</type>
             </dependency>
 
             <!-- Others -->
@@ -936,13 +924,11 @@
                 <groupId>org.freemarker</groupId>
                 <artifactId>com.springsource.freemarker</artifactId>
                 <version>2.3.15</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>com.springsource.org.junit</artifactId>
                 <version>4.7.0</version>
-                <scope>test</scope>
             </dependency>
 
             <!-- SLF4J API -->
@@ -1000,14 +986,12 @@
                 <artifactId>granite-swc</artifactId>
                 <version>${granite.version}</version>
                 <type>swc</type>
-                <scope>internal</scope>
             </dependency>    
             <dependency>
                 <groupId>org.graniteds</groupId>
                 <artifactId>granite-essentials-swc</artifactId>
                 <version>${granite.version}</version>
                 <type>swc</type>
-                <scope>internal</scope>
             </dependency>
             <dependency>
                 <groupId>org.graniteds</groupId>
@@ -1039,10 +1023,9 @@
                 <artifactId>asunit</artifactId>
                 <version>20071011</version>
                 <type>swc</type>
-                <scope>test</scope>
             </dependency>
         
-            <!-- Project dependencies -->
+            <!-- Project dependencies 
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.common.util</artifactId>
@@ -1183,6 +1166,7 @@
                 <version>${project.version}</version>
                 <type>war</type>
             </dependency>
+            -->
         </dependencies>
     </dependencyManagement>
 
@@ -1195,7 +1179,8 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.test</artifactId>
-            <scope>test</scope>
+            <version>${spring.version}</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
