--- a/org.openwms/trunk/tms/org.openwms.tms.flex.module/pom.xml
+++ b/org.openwms/trunk/tms/org.openwms.tms.flex.module/pom.xml
@@ -26,14 +26,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.openwms</groupId>
-		<artifactId>org.openwms</artifactId>
+		<artifactId>org.openwms.tms</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.openwms.tms.flex.module</artifactId>
 	<packaging>swf</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
-		<moduleDir>..</moduleDir>
+		<moduleDir>../..</moduleDir>
 		<template.version>2.0.0</template.version>
 	</properties>
 	<build>
@@ -178,6 +178,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.domain.as</artifactId>
+			<version>${common.version}</version>
 			<type>swc</type>
 		</dependency>
         <dependency>
@@ -188,11 +189,13 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.lib</artifactId>
+            <version>${common.version}</version>
             <type>swc</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.flex.lib</artifactId>
+            <version>${common.version}</version>
             <type>swc</type>
         </dependency>
 		<dependency>
