--- a/org.openwms/trunk/tms/org.openwms.tms.util/pom.xml
+++ b/org.openwms/trunk/tms/org.openwms.tms.util/pom.xml
@@ -26,14 +26,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms</artifactId>
+        <artifactId>org.openwms.tms</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.tms.util</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>..</moduleDir>
+        <moduleDir>../..</moduleDir>
         <openwms.configuration.version>0.0.1-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
@@ -74,6 +74,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.util</artifactId>
+            <version>${common.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
