--- a/org.openwms/trunk/app/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/app/org.openwms.app.plan/pom.xml
@@ -169,6 +169,11 @@
             <artifactId>org.springframework.security.core</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>org.springframework.security.config</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <!-- Project CORE dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
