--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -245,6 +245,7 @@
                 <module>app</module>
                 <module>core</module>
                 <module>common</module>
+                <module>tms</module>
             </modules>
         </profile>
         <profile>
