--- a/org.openwms/trunk/app/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.wrapper/pom.xml
@@ -172,7 +172,7 @@
         <!-- CORE Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.framework.test</artifactId>
+            <artifactId>org.openwms.core.test</artifactId>
             <version>${core.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
