--- a/org.openwms/trunk/common/org.openwms.common.domain/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.domain/pom.xml
@@ -73,7 +73,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.framework.test</artifactId>
+            <artifactId>org.openwms.core.test</artifactId>
             <version>${core.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
