--- a/org.openwms/trunk/core/org.openwms.core.integration.jpa/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.integration.jpa/pom.xml
@@ -139,7 +139,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.framework.test</artifactId>
+            <artifactId>org.openwms.core.test</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
