--- a/org.openwms/trunk/core/org.openwms.core.test/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.test/pom.xml
@@ -29,7 +29,7 @@
         <artifactId>org.openwms.core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.core.framework.test</artifactId>
+    <artifactId>org.openwms.core.test</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
