--- a/org.openwms/trunk/core/pom.xml
+++ b/org.openwms/trunk/core/pom.xml
@@ -60,7 +60,7 @@
             <modules>
                 <module>org.openwms.core.domain</module>
                 <module>org.openwms.core.domain.as</module>
-                <module>org.openwms.core.framework.test</module>
+                <module>org.openwms.core.test</module>
                 <module>org.openwms.core.infrastructure.configuration</module>
                 <module>org.openwms.core.infrastructure.hsql</module>
                 <module>org.openwms.core.infrastructure.oracle</module>
@@ -80,7 +80,7 @@
             <modules>
                 <module>org.openwms.core.domain</module>
                 <module>org.openwms.core.domain.as</module>
-                <module>org.openwms.core.framework.test</module>
+                <module>org.openwms.core.test</module>
                 <module>org.openwms.core.infrastructure.configuration</module>
                 <module>org.openwms.core.infrastructure.hsql</module>
                 <module>org.openwms.core.infrastructure.oracle</module>
@@ -113,7 +113,7 @@
 	        </dependency>
 	        <dependency>
 	            <groupId>${project.groupId}</groupId>
-	            <artifactId>org.openwms.core.framework.test</artifactId>
+	            <artifactId>org.openwms.core.test</artifactId>
 	            <version>${project.version}</version>
 	            <type>test-jar</type>
 	            <scope>test</scope>
