--- a/org.openwms/trunk/tms/org.openwms.tms.service.spring/pom.xml
+++ b/org.openwms/trunk/tms/org.openwms.tms.service.spring/pom.xml
@@ -122,7 +122,7 @@
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.framework.test</artifactId>
+            <artifactId>org.openwms.core.test</artifactId>
             <version>${core.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
