--- a/org.openwms/trunk/core/org.openwms.client.flex.lib/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.client.flex.lib/pom.xml
@@ -140,7 +140,7 @@
 		</plugins>
 	</build>
 
-    <reporting>
+    <!-- reporting>
         <plugins>
             <plugin>
                 <groupId>org.sonatype.flexmojos</groupId>
@@ -163,7 +163,7 @@
                 </reportSets>
             </plugin>
         </plugins>
-    </reporting>
+    </reporting-->
 
 	<repositories>
 		<repository>
