--- a/org.openwms/trunk/app/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms/trunk/app/org.openwms.client.flex.app/pom.xml
@@ -106,7 +106,19 @@
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
+                        <artifactId>org.openwms.client.flex.lib</artifactId>
+                        <version>${project.version}</version>
+                        <type>swc</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.domain.as</artifactId>
+                        <version>${common.version}</version>
+                        <type>swc</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>org.openwms.common.flex.lib</artifactId>
                         <version>${common.version}</version>
                         <type>swc</type>
                     </dependency>
@@ -114,12 +126,6 @@
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.tms.domain.as</artifactId>
                         <version>${tms.version}</version>
-                        <type>swc</type>
-                    </dependency>
-                    <dependency>
-                        <groupId>${project.groupId}</groupId>
-                        <artifactId>org.openwms.client.flex.lib</artifactId>
-                        <version>${project.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
@@ -247,13 +253,14 @@
 	</pluginRepositories>
 
 	<dependencies>
+        <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.spring-library</artifactId>
             <type>libd</type>
         </dependency>
         
-        <!-- Project dependencies -->
+        <!-- CORE Project dependencies -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.core.domain.as</artifactId>
@@ -263,21 +270,35 @@
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.client.flex.lib</artifactId>
+            <version>${core.version}</version>
+            <type>swc</type>
+            <scope>internal</scope>
+        </dependency>
+
+        <!-- COMMON Project dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain.as</artifactId>
             <version>${common.version}</version>
             <type>swc</type>
+            <scope>internal</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.flex.lib</artifactId>
+            <version>${common.version}</version>
+            <type>swc</type>
+            <scope>internal</scope>
+        </dependency>
+
+        <!-- TMS Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.domain.as</artifactId>
             <version>${tms.version}</version>
             <type>swc</type>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.client.flex.lib</artifactId>
-            <version>${project.version}</version>
-            <type>swc</type>
+            <scope>internal</scope>
         </dependency>
 		
         <!-- Adobe Flex Framework -->
