--- a/org.openwms/trunk/tms/org.openwms.tms.flex.module/pom.xml
+++ b/org.openwms/trunk/tms/org.openwms.tms.flex.module/pom.xml
@@ -170,25 +170,25 @@
 	</pluginRepositories>
 
 	<dependencies>
+        <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.spring-library</artifactId>
             <type>libd</type>
         </dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>org.openwms.common.domain.as</artifactId>
-			<version>${common.version}</version>
-			<type>swc</type>
-		</dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.tms.domain.as</artifactId>
-            <type>swc</type>
-        </dependency>
+
+        <!-- CORE Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.lib</artifactId>
+            <version>${core.version}</version>
+            <type>swc</type>
+        </dependency>
+        
+        <!-- COMMON Project dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.domain.as</artifactId>
             <version>${common.version}</version>
             <type>swc</type>
         </dependency>
@@ -198,6 +198,14 @@
             <version>${common.version}</version>
             <type>swc</type>
         </dependency>
+        
+        <!-- Project dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.tms.domain.as</artifactId>
+            <type>swc</type>
+        </dependency>
+
 		<dependency>
 			<groupId>com.adobe.flex.framework</groupId>
 			<artifactId>flex-framework</artifactId>
