Commented oracle dependency due to license conflicts out
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1205 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/core/org.openwms.core.infrastructure.oracle/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.infrastructure.oracle/pom.xml
@@ -85,14 +85,14 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Database libraries -->
+        <!-- Database libraries 
         <dependency>
             <groupId>org.openwms</groupId>
             <artifactId>oracle.jdbc.driver</artifactId>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-       
+       -->
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
