Changed granite repo
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1209 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/common/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.domain.as/pom.xml
@@ -187,7 +187,7 @@
 	<repositories>
 		<repository>
 			<id>granite-repo</id>
-			<url>http://download.java.net/maven/2/</url>
+			<url>http://repo2.maven.org/maven2</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
