Added dependent classes from the core framework because flex-mojos plugin does not work with AS inheritance over separate swc files
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1219 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/common/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.domain.as/pom.xml
@@ -128,7 +128,12 @@
 					</interfaceTemplate>
 					<includeJavaClasses>
 						<class>org.openwms.common.domain.*</class>
+                        <class>org.openwms.core.domain.AbstractEntity</class>
+                        <class>org.openwms.core.domain.DomainObject</class>
 					</includeJavaClasses>
+                    <excludeJavaClasses>
+                        <class>org.openwms.core.domain.system.usermanagement.User$1</class>
+                    </excludeJavaClasses>
                     <sourcePaths>
 						<sourcePath>${project.basedir}/src/main/flex/</sourcePath>
 						<sourcePath>${project.build.directory}/generated-sources/flexmojos/</sourcePath>
