--- a/org.openwms/trunk/tms/org.openwms.tms.domain.as/pom.xml
+++ b/org.openwms/trunk/tms/org.openwms.tms.domain.as/pom.xml
@@ -120,7 +120,12 @@
 					</interfaceTemplate>
 					<includeJavaClasses>
 						<class>org.openwms.tms.domain.*</class>
-					</includeJavaClasses>
+                        <class>org.openwms.core.domain.AbstractEntity</class>
+                        <class>org.openwms.core.domain.DomainObject</class>
+                    </includeJavaClasses>
+                    <excludeJavaClasses>
+                        <class>org.openwms.core.domain.system.usermanagement.User$1</class>
+                    </excludeJavaClasses>
 					<sourcePaths>
 						<sourcePath>${project.basedir}/src/main/flex/</sourcePath>
 						<sourcePath>${project.build.directory}/generated-sources/flexmojos/</sourcePath>
